feat(django):RESTful测试

--- a/Django/vote/static/html/subjects.html
+++ b/Django/vote/static/html/subjects.html
@@ -31,7 +31,8 @@
                 subjects: []
             },
             created() {
-                fetch('/api/subjects/')
+                // fetch('/api/subjects/')
+                fetch('/api/show_subjects/')
                     .then(resp => resp.json())
                     .then(json => {
                         this.subjects = json
